--- a/alfa.css
+++ b/alfa.css
@@ -119,8 +119,8 @@ h2 {
 }
 
 .check-button.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #F2F2F2;
+  color: #020118;
   cursor: pointer;
 }
 
@@ -140,7 +140,7 @@ h2 {
 }
 
 .result-box.correct h3 {
-  color: #00e676;
+  color: #56CE2A;
   font-size: 16px;
   margin-bottom: 15px;
   display: flex;
@@ -150,7 +150,7 @@ h2 {
 }
 
 .result-box.incorrect h3 {
-  color: #ff5252;
+  color: #CE2A2A;
   font-size: 16px;
   margin-bottom: 15px;
   display: flex;
@@ -178,19 +178,19 @@ h2 {
 }
 
 .result-options a {
-  background-color: #e53935;
+  background-color: #CE2A2A;
 }
 
 .result-options a:hover {
-  background-color: #c62828;
+  background-color: #CE2A2A;
 }
 
 .result-options div#nextPageBtn {
-  background-color: #4caf50;
+  background-color: #56CE2A;
 }
 
 .result-options div#nextPageBtn:hover {
-  background-color: #388e3c;
+  background-color: #56CE2A;
 }
 
 .overlay {
