--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ p{
     background-color: #f2f2f2;
     padding: 15px 100px 15px 100px;
     border-radius: 20px;
-    margin-top: 40%;
+    margin-top: 60px;
 }
 a{
     color:#020118;
