--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
-html {
+html, body {
+    margin: 0;
+    padding: 0;
     height: 100%;
     overflow: hidden;
 }
-body{
+body {
     background-color: #020118;
     color: #FFFFFF;
     font-family: "Inria Sans", sans-serif;
-    margin: 0; 
-    height: 100%; 
-    overflow: hidden;
+    position: relative; 
 }
 .container{
     display: flex;
@@ -35,6 +35,7 @@ p{
     padding: 15px 100px 15px 100px;
     border-radius: 20px;
     margin-top: 60px;
+    z-index: 99999;
 }
 a{
     color:#020118;
